--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,14 @@ button:hover {
     font-size: 1.2em;
     color: #333;
 }
+@media screen and (max-width: 1024px) {
+    .card {
+        width: calc(50% - 40px);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: calc(100% - 40px);
+    }
+}
